--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">BCMapNKO</string>
     <string name="title_activity_maps">Map</string>
     <string name="action_add_task">Добавить задачу</string>
+    <string name="title">Заголовок</string>
+    <string name="description">Описание</string>
+    <string name="select_location">Выбрать местоположение</string>
+    <string name="title_activity_activity_select_location">Map</string>
 </resources>
