--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
-    <string name="app_name">BCMapNKO</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="app_name">БФ Добро</string>
+    <string name="title_activity_maps">Карта мероприятий</string>
     <string name="action_add_task">Добавить задачу</string>
     <string name="title">Заголовок</string>
     <string name="description">Описание</string>
+    <string name="contacts">Контакты</string>
     <string name="select_location">Выбрать местоположение</string>
-    <string name="title_activity_activity_select_location">Map</string>
+    <string name="title_activity_activity_select_location">Выбор места проведения</string>
+    <string name="confirm">Подтвердить</string>
 </resources>
