--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="contacts">Контакты</string>
     <string name="select_location">Выбрать местоположение</string>
     <string name="title_activity_activity_select_location">Выбор места проведения</string>
+    <string name="title_activity_activity_add_task">Информация о задаче</string>
     <string name="confirm">Подтвердить</string>
 </resources>
